# morse-code-esp32

./: .env.example  .gitignore  1  README.md  partitions.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: audio_control.c.EB81C19F6DBE5A77.idx  audio_control.h.8141796FB53CBED9.idx  cJSON.c.06210BF4E48B6E24.idx  cJSON.h.153A181E5810D0B3.idx  cJSON_Utils.c.64E1E7C810C2511A.idx  cJSON_Utils.h.10473E2CE7E26015.idx  config_manager.c.B8ED51A9252E13DF.idx  config_manager.h.E81B51E735F506A6.idx  esp_littlefs.c.3601E4F35FBB1C56.idx  esp_littlefs.h.5176D790A9CEF6DE.idx  hello_world_main.c.BFDD81936DAC0B5F.idx  lfs.c.578625A08A9C0F37.idx  lfs.h.FD4C0BC5A7725708.idx  lfs_config.c.9AE63C3759E30CB3.idx  lfs_config.h.E4E8936ABC8BEAB1.idx  lfs_util.c.9FD855233A6F4D7E.idx  lfs_util.h.7A8E8AC96559323A.idx  littlefs_api.h.D6D12FCA46FEF630.idx  littlefs_esp_part.c.02E607D7B81F033D.idx  main.c.5FC78E118CDE8DB3.idx  morse_control.c.4508AFAA2F80E7E7.idx  morse_control.c.90D375F3775582E0.idx  morse_control.h.8C3D0FD25E581DD1.idx  morse_control.h.A5FFFC55583A28C1.idx  web_server.c.865317FBAF533EA2.idx  web_server.h.6A5BFB80D6FD84D7.idx  wifi_station.c.9ECE6BA13CC67D07.idx  wifi_station.h.DFBC4AC7D9F219A7.idx
main/: CMakeLists.txt  audio_control.c  audio_control.h  config_manager.c  config_manager.h  main.c  morse_control.c  morse_control.h  web_server.c  web_server.h  wifi_station.c  wifi_station.h
